--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <style>
+        .uppercase {
+            text-transform: uppercase;
+        }
+    </style>
 </head>
 <body>
     <div id="form-container" class="contact-us">
@@ -33,7 +38,7 @@
         </select><br><br>
       
         <label for="namaUser">Nama User:</label>
-        <input type="text" id="namaUser" name="namaUser"><br><br>
+        <input type="text" id="namaUser" name="namaUser" class="uppercase"><br><br>
   
         <!-- PC Section -->
         <h3>PC</h3>
