--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body>
     <div id="form-container" class="contact-us">
         <label class="label">Form Inventory IT Soll Marina</label>
-        <form action="https://script.google.com/macros/s/AKfycbwyCsQxxYtviK1yVVU7VH8t07pcEKhjXypi8_A90DGftY5dvxBT2OuYEKKhvjq0SgQ12w/exec" id="formInventory" method="post" enctype="multipart/form-data">
+        <form action="https://script.google.com/macros/s/AKfycbzTECYf6xFsRz01E1B_l5AOfdpNrcZjLMkeEvJBN6vL0njJ1dBZUeoe5pIKP4NPxjMxFA/exec" id="formInventory" method="post" enctype="multipart/form-data">
             <!-- Tanggal Section -->
             <div class="form-section">
                 <label for="tgl" class="label">Tanggal:</label>
@@ -76,7 +76,7 @@
                 <div class="form-group">
                     <label for="pcAda">Ada/Tidak:</label>
                     <select id="pcAda" name="pcAda">
-                        <option value="Tidak">Tidak Ada</option>
+                        <option value="Tidak Ada">Tidak Ada</option>
                         <option value="Ada">Ada</option>
                     </select>
                 </div>
@@ -87,9 +87,9 @@
                 <div class="form-group">
                     <label for="kondisiPC">Kondisi:</label>
                     <select id="kondisiPC" name="kondisiPC">
-                        <option value="Tidakada value">Tidak Ada</option>
-                        <option value="Normal">Semua Normal</option>
-                        <option value="Tidak Normal">Beberapa Tidak Normal</option>
+                        <option value="Tidak Ada">Tidak Ada</option>
+                        <option value="Semua Normal">Semua Normal</option>
+                        <option value="Beberapa Tidak Normal">Beberapa Tidak Normal</option>
                     </select>
                 </div>
             </div>
@@ -100,7 +100,7 @@
                 <div class="form-group">
                     <label for="printerAda">Ada/Tidak:</label>
                     <select id="printerAda" name="printerAda">
-                        <option value="Tidak">Tidak Ada</option>
+                        <option value="Tidak Ada">Tidak Ada</option>
                         <option value="Ada">Ada</option>
                     </select>
                 </div>
@@ -111,9 +111,9 @@
                 <div class="form-group">
                     <label for="kondisiPrinter">Kondisi:</label>
                     <select id="kondisiPrinter" name="kondisiPrinter">
-                        <option value="Tidakada value">Tidak Ada</option>
-                        <option value="Normal">Semua Normal</option>
-                        <option value="Tidak Normal">Beberapa Tidak Normal</option>
+                        <option value="Tidak Ada">Tidak Ada</option>
+                        <option value="Semua Normal">Semua Normal</option>
+                        <option value="Beberapa Tidak Normal">Beberapa Tidak Normal</option>
                     </select>
                 </div>
             </div>
@@ -124,7 +124,7 @@
                 <div class="form-group">
                     <label for="hddAda">Ada/Tidak:</label>
                     <select id="hddAda" name="hddAda">
-                        <option value="Tidak">Tidak Ada</option>
+                        <option value="Tidak Ada">Tidak Ada</option>
                         <option value="Ada">Ada</option>
                     </select>
                 </div>
@@ -135,9 +135,9 @@
                 <div class="form-group">
                     <label for="kondisiHDD">Kondisi:</label>
                     <select id="kondisiHDD" name="kondisiHDD">
-                        <option value="Tidakada value">Tidak Ada</option>
-                        <option value="Normal">Semua Normal</option>
-                        <option value="Tidak Normal">Beberapa Tidak Normal</option>
+                        <option value="Tidak Ada">Tidak Ada</option>
+                        <option value="Semua Normal">Semua Normal</option>
+                        <option value="Beberapa Tidak Normal">Beberapa Tidak Normal</option>
                     </select>
                 </div>
             </div>
@@ -148,7 +148,7 @@
                 <div class="form-group">
                     <label for="laptopAda">Ada/Tidak:</label>
                     <select id="laptopAda" name="laptopAda">
-                        <option value="Tidak">Tidak Ada</option>
+                        <option value="Tidak Ada">Tidak Ada</option>
                         <option value="Ada">Ada</option>
                     </select>
                 </div>
@@ -159,9 +159,9 @@
                 <div class="form-group">
                     <label for="kondisiLaptop">Kondisi:</label>
                     <select id="kondisiLaptop" name="kondisiLaptop">
-                        <option value="Tidakada value">Tidak Ada</option>
-                        <option value="Normal">Semua Normal</option>
-                        <option value="Tidak Normal">Beberapa Tidak Normal</option>
+                        <option value="Tidak Ada">Tidak Ada</option>
+                        <option value="Semua Normal">Semua Normal</option>
+                        <option value="Beberapa Tidak Normal">Beberapa Tidak Normal</option>
                     </select>
                 </div>
             </div>
@@ -172,7 +172,7 @@
                 <div class="form-group">
                     <label for="flashdiskAda">Ada/Tidak:</label>
                     <select id="flashdiskAda" name="flashdiskAda">
-                        <option value="Tidak">Tidak Ada</option>
+                        <option value="Tidak Ada">Tidak Ada</option>
                         <option value="Ada">Ada</option>
                     </select>
                 </div>
@@ -183,9 +183,9 @@
                 <div class="form-group">
                     <label for="kondisiFlashdisk">Kondisi:</label>
                     <select id="kondisiFlashdisk" name="kondisiFlashdisk">
-                        <option value="Tidakada value">Tidak Ada</option>
-                        <option value="Normal">Semua Normal</option>
-                        <option value="Tidak Normal">Beberapa Tidak Normal</option>
+                        <option value="Tidak Ada">Tidak Ada</option>
+                        <option value="Semua Normal">Semua Normal</option>
+                        <option value="Beberapa Tidak Normal">Beberapa Tidak Normal</option>
                     </select>
                 </div>
             </div>
@@ -196,7 +196,7 @@
                 <div class="form-group">
                     <label for="monitorAda">Ada/Tidak:</label>
                     <select id="monitorAda" name="monitorAda">
-                        <option value="Tidak">Tidak Ada</option>
+                        <option value="Tidak Ada">Tidak Ada</option>
                         <option value="Ada">Ada</option>
                     </select>
                 </div>
@@ -207,9 +207,9 @@
                 <div class="form-group">
                     <label for="kondisiMonitor">Kondisi:</label>
                     <select id="kondisiMonitor" name="kondisiMonitor">
-                        <option value="Tidakada value">Tidak Ada</option>
-                        <option value="Normal">Semua Normal</option>
-                        <option value="Tidak Normal">Beberapa Tidak Normal</option>
+                        <option value="Tidak Ada">Tidak Ada</option>
+                        <option value="Semua Normal">Semua Normal</option>
+                        <option value="Beberapa Tidak Normal">Beberapa Tidak Normal</option>
                     </select>
                 </div>
             </div>
@@ -220,7 +220,7 @@
                 <div class="form-group">
                     <label for="routerAda">Ada/Tidak:</label>
                     <select id="routerAda" name="routerAda">
-                        <option value="Tidak">Tidak Ada</option>
+                        <option value="Tidak Ada">Tidak Ada</option>
                         <option value="Ada">Ada</option>
                     </select>
                 </div>
@@ -231,9 +231,9 @@
                 <div class="form-group">
                     <label for="kondisiRouter">Kondisi:</label>
                     <select id="kondisiRouter" name="kondisiRouter">
-                        <option value="Tidakada value">Tidak Ada</option>
-                        <option value="Normal">Semua Normal</option>
-                        <option value="Tidak Normal">Beberapa Tidak Normal</option>
+                        <option value="Tidak Ada">Tidak Ada</option>
+                        <option value="Semua Normal">Semua Normal</option>
+                        <option value="Beberapa Tidak Normal">Beberapa Tidak Normal</option>
                     </select>
                 </div>
             </div>
