--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                         <option value="Tidak Ada">Tidak Ada</option>
                         <option value="Semua Normal">Semua Normal</option>
                         <option value="Beberapa Tidak Normal">Beberapa Tidak Normal</option>
+                        <option value="Semua Tidak Normal">Semua Tidak Normal</option>
                     </select>
                 </div>
             </div>
@@ -114,6 +115,7 @@
                         <option value="Tidak Ada">Tidak Ada</option>
                         <option value="Semua Normal">Semua Normal</option>
                         <option value="Beberapa Tidak Normal">Beberapa Tidak Normal</option>
+                        <option value="Semua Tidak Normal">Semua Tidak Normal</option>
                     </select>
                 </div>
             </div>
@@ -138,6 +140,7 @@
                         <option value="Tidak Ada">Tidak Ada</option>
                         <option value="Semua Normal">Semua Normal</option>
                         <option value="Beberapa Tidak Normal">Beberapa Tidak Normal</option>
+                        <option value="Semua Tidak Normal">Semua Tidak Normal</option>
                     </select>
                 </div>
             </div>
@@ -162,6 +165,7 @@
                         <option value="Tidak Ada">Tidak Ada</option>
                         <option value="Semua Normal">Semua Normal</option>
                         <option value="Beberapa Tidak Normal">Beberapa Tidak Normal</option>
+                        <option value="Semua Tidak Normal">Semua Tidak Normal</option>
                     </select>
                 </div>
             </div>
@@ -186,6 +190,7 @@
                         <option value="Tidak Ada">Tidak Ada</option>
                         <option value="Semua Normal">Semua Normal</option>
                         <option value="Beberapa Tidak Normal">Beberapa Tidak Normal</option>
+                        <option value="Semua Tidak Normal">Semua Tidak Normal</option>
                     </select>
                 </div>
             </div>
@@ -210,6 +215,7 @@
                         <option value="Tidak Ada">Tidak Ada</option>
                         <option value="Semua Normal">Semua Normal</option>
                         <option value="Beberapa Tidak Normal">Beberapa Tidak Normal</option>
+                        <option value="Semua Tidak Normal">Semua Tidak Normal</option>
                     </select>
                 </div>
             </div>
@@ -234,6 +240,7 @@
                         <option value="Tidak Ada">Tidak Ada</option>
                         <option value="Semua Normal">Semua Normal</option>
                         <option value="Beberapa Tidak Normal">Beberapa Tidak Normal</option>
+                        <option value="Semua Tidak Normal">Semua Tidak Normal</option>
                     </select>
                 </div>
             </div>
