--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <style>
-        .uppercase {
-            text-transform: uppercase;
-        }
         .form-section {
             display: flex;
             flex-direction: column;
@@ -67,7 +64,7 @@
             
             <div class="form-section">
                 <label for="namaUser" class="label">Nama User:</label>
-                <input type="text" id="namaUser" name="namaUser" class="uppercase">
+                <input type="text" id="namaUser" name="namaUser">
             </div>
         
             <!-- PC Section -->
