--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="inilogo">
             <img src="assets/logo1.png" class="logo"  alt="Logo">
         </div>
-        <label class="judul">Form Inventory IT Soll Marina Hotel Serpong</label>
+        <label class="judul">Form Inventory IT Soll Marina Hotel Serpongg</label>
         <form action="https://script.google.com/macros/s/AKfycbzTECYf6xFsRz01E1B_l5AOfdpNrcZjLMkeEvJBN6vL0njJ1dBZUeoe5pIKP4NPxjMxFA/exec" id="formInventory" method="post" enctype="multipart/form-data">
             <!-- Tanggal Section -->
             <div class="form-section">
