--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Inventory IT Soll Marina Hotel Serpong</title>
+    <title>Form Inventory IT Soll Marina</title>
     <link rel="stylesheet" href="main.css">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
@@ -63,11 +63,13 @@
             <img src="assets/logo1.png" class="logo"  alt="Logo">
         </div>
         <label class="judul">Form Inventory IT Soll Marina Hotel Serpong</label>
-        <form action="https://script.google.com/macros/s/AKfycbz94IFqMUJ0bJAWDOfYYnoqO-5owJImKnXNN1P-fM5KyTE7woIDxpfl_M8ZgIIy_vgFAg/exec" id="formInventory" method="post" enctype="multipart/form-data">
+        <form action="https://script.google.com/macros/s/AKfycbzTECYf6xFsRz01E1B_l5AOfdpNrcZjLMkeEvJBN6vL0njJ1dBZUeoe5pIKP4NPxjMxFA/exec" id="formInventory" method="post" enctype="multipart/form-data">
             <!-- Tanggal Section -->
             <div class="form-section">
-                <label for="tgl" class="label">Tanggal:</label>
-                <input type="date" id="tgl" name="tgl" required>
+                <div class="form-input">
+                    <label for="tgl" class="label">Tanggal:</label>
+                    <input type="date" style="width:94%" id="tgl" name="tgl" required>
+                </div>
             </div>
             <!-- Departemen Section -->
             <div class="form-section">
