--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="form-section">
                 <div class="form-input">
                     <label for="tgl" class="label">Tanggal:</label>
-                    <input type="date" style="width:94%" id="tgl" name="tgl" required>
+                    <input type="date" class="itgl" id="tgl" name="tgl" required>
                 </div>
             </div>
             <!-- Departemen Section -->
