--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </div>
             <!-- HDD Extra Section -->
             <div class="form-section">
-                <h1>HDD Extra</h1>
+                <h1>HDD Ext.</h1>
                 <div class="form-group">
                     <label for="hddAda">Ada/Tidak:</label>
                     <select id="hddAda" name="hddAda">
