--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
     <style>
         .form-section {
             display: flex;
