--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
             <!-- Nama User Section -->
             <div class="form-section">
-                <label for="namaUser" class="label">Nama User:</label>
+                <label for="namaUser" class="label">HOD/Nama User:</label>
                 <input type="text" id="namaUser" name="namaUser" required>
             </div>
             <!-- PC Section -->
