--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                     <option value="ENG">ENG</option>
                     <option value="FBP">FBP</option>
                     <option value="FBS">FBS</option>
+                    <option value="HR">HR</option>
                 </select>
             </div>
             <!-- Nama User Section -->
